# ConcertoBus

./: .gitignore  CLAUDE.md  CMakeLists.txt  ConcertoBus.pro  ConcertoBusClient.pro  ConcertoBusDaemon.pro  example_config.qml  launcher_catalog.example.json
bus/: BusCore.cpp  BusCore.h  BusServer.cpp  BusServer.h  Catalog.cpp  Catalog.h  IBusGateway.cpp  IBusGateway.h  IBusTransport.cpp  IBusTransport.h  ProcessManager.cpp  ProcessManager.h  Router.cpp  Router.h  XmppGateway.cpp  XmppGateway.h  main.cpp
bus/buscore/: buscore.pro
bus/config/: BusConfigLoader.cpp  BusConfigLoader.h  BusConfigTypes.h  LaunchSpecReader.h  config.pro
bus/processmanager/: processmanager.pro
bus/router/: router.pro
client/: AbstractBusClient.cpp  AbstractBusClient.h  BusClient.cpp  BusClient.h  BusClientQml.cpp  BusClientQml.h  CMakeLists.txt  ConcertoBusPlugin.cpp  LaunchSpec.cpp  LaunchSpec.h  StdioBusClient.cpp  StdioBusClient.h  client.pro
client/host/: host.pro  main.cpp
client/qmlplugin/: qmlplugin.pro
daemon/: CMakeLists.txt  daemon.pro
demo/: config.qml
demo/ControllerApp/: App.qml  Launch.qml
demo/DisplayApp/: App.qml  Launch.qml
demo/Qt5ClientApp/: Qt5ClientApp.pro  RawBusClient.h  main.cpp
demo/SensorApp/: App.qml  Launch.qml
demo/SensorPanel/: App.qml  Launch.qml
demo/ShellApp/: App.qml  Launch.qml
demo/controller/: main.cpp
demo/tcp-demo/: config.qml
demo/xmpp-demo/: README.md
demo/xmpp-demo/runner-a/: config.qml
demo/xmpp-demo/runner-b/: config.qml
deploy/: Deploy-ConcertoBus.ps1  Deploy-XmppDemo.ps1  Pack-Demo.ps1
docs/: ConcertoBus-Guide.md  developer-guide.md
gateways/xmpp/: XmppGateway.cpp  XmppGateway.h  XmppGateway.json  xmpp.pro
tests/: tst_buscore.cpp  tst_config.cpp  tst_local.cpp  tst_processmanager.cpp  tst_qt5client.cpp  tst_reflection.cpp  tst_router.cpp  tst_stdio.cpp
tests/stdio_echo_helper/: main.cpp  stdio_echo_helper.pro
tests/tst_buscore/: tst_buscore.pro
tests/tst_config/: tst_config.pro
tests/tst_local/: tst_local.pro
tests/tst_processmanager/: tst_processmanager.pro
tests/tst_qt5client/: tst_qt5client.pro
tests/tst_router/: tst_router.pro
tests/tst_stdio/: tst_stdio.pro
transports/stdio/: StdioTransport.cpp  StdioTransport.h  stdio.pro
transports/tcp/: TcpTransport.cpp  TcpTransport.h  TcpTransport.json  tcp.pro
